# lfs-bzl

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  DESIGN.md  README.md
docs/: chroot.md  status.md  tools.md  troubleshooting.md
src/: .bazelrc  .shellcheckrc  BUILD  MODULE.bazel  WORKSPACE  resolved_deps.py
src/tools/: BUILD  lfs-chroot-helper.sh  lfs_build.bzl  lfs_chroot.bzl  lfs_chroot_command_wrapper.sh  lfs_defaults.bzl  lfs_macros.bzl  lfs_package.bzl  lfs_runner_script.sh  lfs_script.bzl  lfs_toolchain.bzl  providers.bzl
src/tools/podman/: BUILD  Containerfile  worker.py  worker_test.py
src/tools/podman/scripts/: cleanup_orphaned.sh  worker.py  worker_flagfile.tpl  worker_launcher.sh.tpl  worker_smoke_test.sh
src/tools/scripts/: BUILD  build_container.sh  chroot_create_dirs.sh  chroot_extract_tarball.sh  chroot_seed_files.sh  lfs_chroot_exec.sh  lfs_chroot_helper.sh  lfs_chroot_lib.sh  lfs_chroot_mount.sh  stage_ch7_sources.sh  test_wrapper.sh
src/tools/scripts/templates/: BUILD  lfs_chroot_command_wrapper.sh  lfs_chroot_runner_script.sh.tpl  lfs_package_build.sh.tpl  lfs_package_build_template.sh  lfs_sysroot_stage_files_wrapper.sh  worker_launcher.sh.tpl
src/tools/scripts/tests/: BUILD  chroot_smoke_test.sh  test-chroot.sh  test_chroot_echo.sh
